# nexus-hal-esp32-idf

./: CMakeLists.txt  README.md  west.yml
include/: hal_esp32_defs.h  nhal_esp32_builders.h  nhal_esp32_defs.h  nhal_esp32_helpers.h
src/: hal_common.c  hal_esp32_defs.c  hal_i2c.c  hal_i2c_async.c  hal_i2c_transfer.c  hal_pin.c  hal_spi.c  hal_spi_async.c  hal_uart.c  hal_uart_async.c  nhal_common.c  nhal_esp32_defs.c  nhal_i2c.c  nhal_i2c_async.c  nhal_i2c_transfer.c  nhal_pin.c  nhal_spi.c  nhal_spi_async.c  nhal_uart.c  nhal_uart_async.c  nhal_wdt.c
